fix: table overflow scroll

--- a/src/components/dashboard-layout/dashboard-layout.module.css
+++ b/src/components/dashboard-layout/dashboard-layout.module.css
@@ -1,3 +1,4 @@
 .dashboardLayout {
   height: calc(100vh - 56px);
+  overflow: hidden;
 }
